# venum

./: .gitignore  CMakeLists.txt  README.md
include/: venum.h
src/: venum.h  venum.ppo  venum_bu.h
test/: advanced_venum_example.h  enummap_example.h  main.cpp  simple_venum_example.h
